deployments/client-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-app
  template:
    metadata:
      labels:
        app: client-app
    spec:
      containers:
        - name: client-app
          image: client-app
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: client-app
spec:
  selector:
    app: client-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
