deployments/keycloak.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: keycloak
          ports:
            - name: http
              containerPort: 8080
          args:
            - start
            - --hostname=auth.jolszak.test
            - --http-enabled=true
            - --proxy-headers=xforwarded
            - --db-url-host=postgres
            - --db-username=$(DB_USERNAME)
            - --db-password=$(DB_PASSWORD)
            - --metrics-enabled=true
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
