deployments/kraken.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kraken
spec:
  selector:
    matchLabels:
      app: kraken
  replicas: 1
  template:
    metadata:
      labels:
        app: kraken
    spec:
      containers:
      - name: kraken
        image: kraken
        ports:
        - containerPort: 8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE
---
apiVersion: v1
kind: Service
metadata:
  name: kraken
spec:
  selector:
    app: kraken
  ports:
      - port: 8080
        targetPort: 8080
        name: gateway
      - port: 8081
        targetPort: 8081
        name: metrics
