deployments/orders_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-db
  template:
    metadata:
      labels:
        app: orders-db
    spec:
      containers:
      - name: orders-db
        image: postgres:16.2-alpine3.19
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: init-script 
        configMap:
          name: init-sql-configmap-orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-db
spec:
  selector:
    app: orders-db
  ports:
    - protocol: TCP
      port: 5432
