deployments/payments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels:
    app: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: payments
          ports:
            - containerPort: 5020
          resources:
            requests:
              memory: "70Mi"
              cpu: "20m"
            limits:
              memory: "150Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments
  ports:
    - port: 5020
      protocol: TCP
      name: tcp-5000
      targetPort: 5020
