deployments/shipments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipments
  labels:
    app: shipments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipments
  template:
    metadata:
      labels:
        app: shipments
    spec:
      containers:
        - name: shipments
          image: shipments
          ports:
            - containerPort: 5050
          resources:
            requests:
              memory: "180Mi"
              cpu: "30m"
            limits:
              memory: "600Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: shipments-service
spec:
  selector:
    app: shipments
  ports:
    - port: 5050
      protocol: TCP
      name: tcp-5050
      targetPort: 5050
