deployments/smtp-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp4dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp4dev
  template:
    metadata:
      labels:
        app: smtp4dev
    spec:
      containers:
        - name: smtp4dev
          image: rnwood/smtp4dev:latest
          ports:
            - containerPort: 80
            - containerPort: 25
            - containerPort: 587
---
apiVersion: v1
kind: Service
metadata:
  name: smtp4dev
spec:
  selector:
    app: smtp4dev
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: smtp
      port: 25
      targetPort: 25
    - name: submission
      port: 587
      targetPort: 587
