deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /site
        pathType: Prefix
        backend:
          service:
            name: client-app
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong
            port:
              number: 80
