deployments/users.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: users
          ports:
            - containerPort: 5030
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - port: 5030
      protocol: TCP
      name: tcp-5030
      targetPort: 5030
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: users
  annotations:
    konghq.com/strip-path: 'true'
spec:
  parentRefs:
    - name: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /users
      backendRefs:
        - name: users-service
          kind: Service
          port: 5030
