deployments/carts_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts-db
  labels:
    app: carts-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts-db
  template:
    metadata:
      labels:
        app: carts-db
    spec:
      containers:
      - name: carts-db
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: carts-db-service
spec:
  selector:
    app: carts-db
  ports:
    - port: 6379
      protocol: TCP
      name: redis
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: carts-db-policy
spec:
  podSelector:
    matchLabels:
      app: carts-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: carts
