deployments/products_db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-db
  labels:
    app: products-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-db
  template:
    metadata:
      labels:
        app: products-db
    spec:
      containers:
        - name: products-db
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: products-db-service
spec:
  selector:
    app: products-db
  ports:
    - port: 27017
      protocol: TCP
      name: mongo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: products-db-policy
spec:
  podSelector:
    matchLabels:
      app: products-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: products
